--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         </div>
       </div>
     </section>
+    <section id="about">
+
+    </section>
+    <section id="">
+
+    </section>
   </body>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </html>
