--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <nav>
-            
+            <div>
+                <a href="">Portofolio Leo</a>
+            </div>
+            <div></div>     
         </nav>
     </header>
     
